# ResearchFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  api.py  config.py  database.py  main.py  orchestrator.py  schemas.py  streamlit_ui.py  vector_store.py
src/agents/: __init__.py  analysis_agent.py  document_agent.py  web_search_agent.py  writer_agent.py
tests/: test_agents.py
