[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-research-agent"
version = "0.1.0"
description = "Autonomous Research Agent with LangGraph Orchestration"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.0.32",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "tavily-python>=0.1.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.11.0",
    "pinecone>=7.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
